<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.register.PasswordForgotActivity">

    <ImageView
        android:layout_width="match_parent"
        android:id="@+id/banner"
        android:src="@drawable/website_logo_1"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/app_name"
        android:layout_height="200dp"/>

    <TextView
        android:layout_width="match_parent"
        android:text="@string/Welcome_message"
        android:textAlignment="center"
        android:textSize="20sp"
        android:layout_marginTop="-50dp"
        android:textStyle="bold"
        android:textColor="@color/font_primary"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="match_parent"
        android:text="@string/Forgot_password"
        android:layout_marginTop="40dp"
        android:textSize="15sp"
        android:textAlignment="center"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp">

        <EditText
            android:layout_width="match_parent"
            android:id="@+id/forgot_email_field"
            android:hint="@string/email"
            android:padding="12dp"
            android:drawableStart="@drawable/ic_baseline_email_24"
            android:drawablePadding="30dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:background="@drawable/edt_box_design"
            android:autofillHints="emailAddress" />




        <Button
            android:layout_width="match_parent"
            android:layout_marginStart="10dp"
            android:id="@+id/reset_password_btn"
            android:layout_marginEnd="10dp"
            android:background="@drawable/btn_design"
            android:text="@string/forgot_password_btn"
            android:layout_marginTop="40dp"
            android:layout_height="wrap_content"/>

    </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_marginTop="90dp"
            android:textAlignment="center"
            android:textColor="@color/font_primary"
            android:text="@string/version"
            android:layout_height="wrap_content"/>

    </LinearLayout>


