<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.register.RegisterActivity">

    <ImageView
        android:layout_width="match_parent"
        android:id="@+id/banner"
        android:src="@drawable/website_logo_1"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/app_name"
        android:layout_height="200dp"/>

    <TextView
        android:layout_width="match_parent"
        android:text="@string/Welcome_message"
        android:textAlignment="center"
        android:textSize="20sp"
        android:layout_marginTop="-50dp"
        android:textStyle="bold"
        android:textColor="@color/font_primary"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp">

        <EditText
            android:layout_width="match_parent"
            android:id="@+id/name_register"
            android:hint="@string/full_name"
            android:padding="12dp"
            android:drawableStart="@drawable/ic_baseline_person_24"
            android:drawablePadding="30dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:background="@drawable/edt_box_design"
            android:autofillHints="emailAddress" />

        <EditText
            android:layout_width="match_parent"
            android:id="@+id/email_register"
            android:drawablePadding="30dp"
            android:drawableStart="@drawable/ic_baseline_email_24"
            android:layout_marginTop="20dp"
            android:padding="12dp"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/edt_box_design"
            android:autofillHints="password"
            android:layout_height="wrap_content"/>

        <EditText
            android:layout_width="match_parent"
            android:id="@+id/password_register"
            android:hint="@string/password"
            android:padding="12dp"
            android:layout_marginTop="15dp"
            android:drawableStart="@drawable/password_ic"
            android:drawablePadding="30dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:background="@drawable/edt_box_design"
            android:autofillHints="password" />



        <Button
            android:layout_width="match_parent"
            android:layout_marginStart="50dp"
            android:id="@+id/btn_register"
            android:layout_marginEnd="50dp"
            android:background="@drawable/btn_design"
            android:text="@string/reg_link"
            android:layout_marginTop="40dp"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="21dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="0dp"
                android:layout_weight="1"
                android:textAlignment="textEnd"
                android:text="@string/login_msg"
                android:textColor="@color/primary_color"
                android:textSize="12sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="0dp"
                android:layout_weight="1"
                android:text="@string/btn_txt"
                android:id="@+id/txt_goto_login"
                android:textColor="@color/secondary_color"
                android:textSize="15sp"
                tools:ignore="TextContrastCheck" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:textAlignment="center"
            android:textColor="@color/font_primary"
            android:text="@string/version"
            android:layout_height="wrap_content"/>

    </LinearLayout>



</LinearLayout>