<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:layout_height="match_parent"
    tools:context=".presentation.login.SplashActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:contentDescription="@string/app_name"
        android:src="@drawable/website_logo_1"
        android:layout_height="wrap_content"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_marginTop="-130dp"
        android:textStyle="bold"
        android:textColor="@color/primary_color"
        android:textSize="15sp"
        android:text="@string/Welcome_message"
        android:textAlignment="center"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_marginTop="50dp"
        android:textAlignment="center"
        android:textColor="@color/font_primary"
        android:text="@string/version"
        android:layout_height="wrap_content"/>

</LinearLayout>